<resources>
    <string name="app_name">KIDS LEARNING</string>


    <string name="title_activity_login">Sign in</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_animal_cat">Animal_cat</string>
    <string name="title_activity_drawing">Drawing</string>
    <string name="title_activity_rhymes">Rhymes</string>
    <string name="select">Select</string>
    <string name="kids_learning">Kids Learning</string>
    <string name="mad">AVU</string>
    <string name="house"></string>
    <string name="from">From</string>
    <string name="seviye">Lv</string>


    <array name="colorNames">
        <item>RED</item>
        <item>PINK</item>
        <item>PURPLE</item>
        <item>INDIGO</item>
        <item>BLUE</item>
        <item>SKY BLUE</item>
        <item>CYAN</item>
        <item>TEAL</item>
        <item>GREEN</item>
        <item>LIME</item>
        <item>YELLOW</item>
        <item>AMBER</item>
        <item>ORANGE</item>
        <item>BROWN</item>
        <item>GREY</item>
        <item>BLACK</item>
        <item>WHITE</item>
    </array>


    <array name="colors">
        <item>@color/red</item>
        <item>@color/pink</item>
        <item>@color/purple</item>
        <item>@color/indigo1</item>
        <item>@color/blue</item>
        <item>@color/lightblue1</item>
        <item>@color/cyan</item>
        <item>@color/teal1</item>
        <item>@color/green</item>
        <item>@color/lime1</item>
        <item>@color/yellow</item>
        <item>@color/amber</item>
        <item>@color/orange</item>
        <item>@color/brown</item>
        <item>@color/grey</item>
        <item>@color/black</item>
        <item>@color/white</item>
    </array>


</resources>
