<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern"
    tools:context=".Splash">


    <TextView
        android:id="@+id/titleedu"
        android:layout_width="176dp"
        android:layout_height="61dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="EduKids"
        android:textColor="@android:color/background_dark"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <TextView
        android:id="@+id/text_kids_learning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/kids_learning"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/ll_splash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/text_from_splash"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/from"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/avulogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_splash"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/avulogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/mad"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/house_logo"
        app:layout_constraintTop_toBottomOf="@id/text_from_splash" />

    <TextView
        android:id="@+id/house_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/house"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/avulogo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_from_splash" />

    <LinearLayout
        android:id="@+id/ll_splash"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_from_splash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_kids_learning"
        app:layout_constraintVertical_chainStyle="spread">

        <ImageView
            android:id="@+id/splash_image1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/select"
            android:scaleType="centerInside"
            android:src="@drawable/spelling_main" />

        <ImageView
            android:id="@+id/splash_image2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/select"
            android:scaleType="centerInside"
            android:src="@drawable/hotairballoon" />

        <ImageView
            android:id="@+id/splash_image3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/select"
            android:scaleType="centerInside"
            android:src="@drawable/edit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
